[package]
name = "rtc"
version = "0.1.0"
authors = ["mswift42 <martin.haesler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "0.5.0"
pest = "2.1.2"
pest_derive = "2.1.0"
json = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

[dependencies.tera]
version = "1"
default-features = false
